--- a/GLCs_test/GLCs_test.csproj
+++ b/GLCs_test/GLCs_test.csproj
@@ -1,12 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="../GLCs.csproj" />
   </ItemGroup>
-
 </Project>
